  layer info if there isn't one, to avoid the errors about open only being
  supported after a query.  Also wipe the raster layer info in case of 
  an empty result set, or failures of a query to reduce likelyhood of 
  leaking the raster layer info. 

- Improve out of memory handling in mapdrawgdal.c, and mapgd.c. (#2351)

- Improve configuration logic for fastcgi (#2355).


Version 5.0.0 (2007-09-17)
--------------------------

- AGG: Fix angle computation for truetype marker symbols on lines (#2316) 

- Fix support for bilinear resampling of raster data with AGG (#2303)


Version 5.0.0-rc2 (2007-09-10)
------------------------------

- Prevent seg fault in msWMSLoadGetMapParams when request is missing (#2299)

- Fixed calculation of scale in PHP MapScript mapObj.zoomScale() (#2300)

- Fixed conflict between runtime substitution validation and qstring 
  validation.

- Fixed agg configure logic (now should work with --with-agg alone) (#2295)

- Fixed interleaving of multi-band results for raster query (#2294).


Version 5.0.0-rc1 (2007-09-05)
------------------------------

- Fixed "MinFeatureSize AUTO" labeling for polygon layers, works for polygon
  annotation layers too (#2232)

- Fixed path following labels with short (2/3 character) strings (#2223)

- AGG fix a bug when rendering polygons with tiled pixmaps

- Added requirement to provide validation pattern for cgi-based attribute
  queries using the layer metadata key 'qstring_validation_pattern' (#2286)

- Fixed msDebug causing a crash with VS2005 (#2287)

- Added stronger checks on libpdf version in configure script (#2278)

- Added msGetVersionInt() to MapScript (ms_GetVersionInt() in PHP) (#2279)

- _isnan prototype for MSVC builds from <float.h> #2277

- AGG: Fix a bug when rendering brushed lines with vector or pixmap symbols
  (artifacts could appear on outline)
  
- AGG: Adjust symbol height when brushing a line with a vector symbol so that
  the line width isn't truncated
